# city_ticketmaster

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Final Package - Package Vignette.ipynb  Makefile  conf.py  example.ipynb  make.bat
src/city_ticketmaster/: __init__.py
tests/: test_city_ticketmaster.py
