[tool.poetry]
name = "city_ticketmaster"
version = "0.1.0"
description = "a package for looking at information about concerts happening in cities using ticket masters api"
authors = ["Lisa"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
